--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,6 +80,9 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  align-content: center;
+  padding: 5px;
+  height: 40px;
 }
 
 #navigation ul li{
@@ -87,9 +90,37 @@ h1 {
   color: whitesmoke;
   font-size: 20px;
   margin: 5px;
+  padding: 3px;
 }
 
+#navigation ul li:hover{
+  list-style: none;
+  color: whitesmoke;
+  background-color: rgb(177, 177, 177);;
+  font-size: 20px;
+  /* padding: 3px; */
+  border-radius: 5px;
+}
 
+#navigation a:link  {
+  text-decoration: none;
+  color: white;
+}
+
+#navigation a:visited {
+  text-decoration: none;
+  color: rgb(177, 177, 177);
+}
+
+#navigation a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+#navigation a:active {
+  text-decoration: none;
+  color: white;
+}
 /* =============Body styles ==================*/
 main {
   width: 100%;
@@ -189,6 +220,82 @@ footer {
   padding-left: 10px;
 }
 
+
+/* Inventory model */
+
+#inv-display {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
+}
+
+#inv-display li{
+  border: 2px solid black;
+  border-radius: 5px;
+  list-style: none;
+  padding: 10px;
+  margin: 10px;
+}
+
+#inv-display a{
+  text-decoration: none;
+}
+
+/* Item detail */
+
+#item-display {
+  margin: 5px;
+  display: flex;
+  border: 2px solid black;
+  flex-direction: row;
+  border-radius: 5px;
+}
+
+#item_image {
+  border-radius: 5px;
+}
+
+.vertical-line {
+  border-left: 1px solid black; 
+  height: inherit; 
+}
+
+#item-description{
+  /* border: 1px solid black;
+  border-radius: 5px; */
+  padding: 5px;
+}
+
+
+
+
+
+
+@media (max-width: 724px) {
+  /* Item detail */
+
+#item-display {
+  display: flex;
+  border: 2px solid black;
+  flex-direction: column;
+  border-radius: 5px;
+}
+
+.vertical-line {
+  border-top: 1px solid black; 
+  height: inherit; 
+}
+
+#item_image img{
+  max-width: 100%;
+  height: auto;
+}
+
+}
+
+
+
 @media (max-width: 540px) {
   #dmc {
     margin-left: 0px;
@@ -208,5 +315,13 @@ footer {
 
   .siteName > a {
     font-size: 30px;
+  }
+
+  #navigation ul {
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    align-items: flex-start;
+    align-content: space-between;
   }
 }
