--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <section id="titleContent">
     <h1>Welcome to CSE Motors!</h1>
+    <%- messages()%>
     <div id="dmc">
         <div id="dmc_text">
             <h2>DMC Delorian</h2>
