--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -121,6 +121,9 @@ h1 {
   text-decoration: none;
   color: white;
 }
+
+
+
 /* =============Body styles ==================*/
 main {
   width: 100%;
@@ -269,7 +272,89 @@ footer {
 
 
 
+/* FORM */
 
+.form-container {
+  max-width: 300px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  border: 1px solid black;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+}
+.form-group {
+  margin-bottom: 20px;
+}
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+.input,
+select[type="select"],
+textarea[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+input[type="text"]:valid,
+select[type="select"]:valid,
+.input:valid,
+textarea[type="text"]:valid,
+input[type="email"]:valid,
+input[type="password"]:valid {
+  background-color: rgb(138, 190, 160);
+}
+
+input[type="text"]:invalid,
+select[type="select"]:invalid,
+textarea[type="text"]:invalid,
+.input:invalid,
+input[type="email"]:invalid,
+input[type="password"]:invalid {
+  background-color: rgb(253, 166, 156);
+}
+
+.valid {
+  background-color: rgb(138, 190, 160);
+}
+
+.invalid {
+  background-color: rgb(253, 166, 156);
+}
+
+input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #0065d1;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  background-color: rgb(34, 196, 224);
+}
+
+
+.link-container a{
+  text-decoration: none;
+  color: black;
+}
+
+.link-container {
+  width: fit-content;
+  margin: 0 auto;
+}
 
 
 @media (max-width: 724px) {
