--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,4 +3,5 @@ let year = d.getFullYear() %>
 <footer>
     <a href="../../inv/error">error</a>
     <p class="copyright">&copy; <%=year%>, CSE 340</p>
+    <script src='/js/script.js'></script>
 </footer>
