--- a/views/account/editAccount.ejs
+++ b/views/account/editAccount.ejs
@@ -5,7 +5,7 @@
     } %>
 
     <div class="form-container">
-        <form action="/account/register" method="post">
+        <form action="/account/update_account" method="post">
             <div class="form-group">
                 <label for="account_firstname">First name:</label>
                 <input type="text" id="account_firstname" name="account_firstname" required value="<%= locals.account_firstname %>">
@@ -18,6 +18,18 @@
                 <label for="account_email">Email:</label>
                 <input type="email" id="account_email" name="account_email" required value="<%= locals.account_email %>">
             </div>
+            
+            <div class="form-group">
+                <input type="submit" value="Update account info">
+                <input type="hidden" id="account_id" name="account_id" value="<%= account_id %>">
+            </div>
+        </form>
+    </div>
+
+    <div class="form-container">
+        <h4>Password must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character.</h4>
+        <p>* note your original password will be changed</p>
+        <form action="/account/update_password" method="post">
             <div class="form-group">
                 <label for="account_password">Password:</label>
                 <input type="password" id="account_password" name="account_password" minlength="12" 
@@ -26,12 +38,13 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Register">
+                <input type="submit" value="Update password">
+                <input type="hidden" id="account" name="account_id" value="<%= account_id %>"> 
             </div>
             <span id='shwPrdBtn' onclick="shwPass(this)">Show password</span>
         </form>
     </div>
-    <%#- form %>
+
     <%- messages() %>
     <% if (errors) { %>
         <ul class="notice">
@@ -40,4 +53,3 @@
       <%  }) %>
        </ul>
       <% } %>
-    
