--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,10 @@
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
     <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
+      <% if (loggedIn) { %>
+        <a title="Manage account" href="/account/manageAccount">Welcome, <%= userName%>!</a><div></div><a title="Click to log out" href="/account/logout">Logout</a>
+      <% } else { %>
+        <a title="Click to log in" href="/account/login">My Account</a>
+      <% } %>
     </div>
   </header>
