--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -286,6 +286,7 @@ footer {
   border: 1px solid black;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
+  /* margin: 10px; */
 }
 .form-group {
   margin-bottom: 20px;
@@ -377,6 +378,18 @@ input[type="submit"]:hover {
   font-weight: 700;
   font-size: 16px;
   display: block;
+}
+
+#deleteAcBtn {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #b90000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 @media (max-width: 724px) {
