--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -36,12 +36,12 @@
             <div class="form-group">
                 <label for="inv_image">Image Path:</label>
                 <input class="input" type="text" id="inv_image" name="inv_image" required 
-                title="Image path" value="/images/vehicles/no-image.png" value="<%= locals.inv_image %>">
+                title="Image path" value="<%= locals.inv_image ? locals.inv_image : '/images/vehicles/no-image-tn.png' %>" > <!--value="<%#= locals.inv_image %>"-->
             </div>
             <div class="form-group">
                 <label for="inv_thumbnail">Thumbnail Path:</label>
                 <input class="input" type="text" id="inv_thumbnail" name="inv_thumbnail" required 
-                title="Image path" value="/images/vehicles/no-image-tn.png">
+                title="Image path" value="<%= locals.inv_thumbnail ? locals.inv_thumbnail : '/images/vehicles/no-image-tn.png' %>" >  <!--value="/images/vehicles/no-image-tn.png" -->
             </div>
             <div class="form-group">
                 <label for="inv_price">Price:</label>
